--- a/public/sass/_variables.scss
+++ b/public/sass/_variables.scss
@@ -4,5 +4,5 @@ $color-alerta: #00ff00;
 $color-error: #ff0000;
 $color-acceso: #ff00ff;
 $rutaimg: "../img";
-$imgPFondo: "back.png";
+$imgPFondo: "hola.jpg";
 $imgPFondo2: "login.jpg";
