--- a/public/css/estilo.css
+++ b/public/css/estilo.css
@@ -1,6 +1,9 @@
 @media screen and (min-width: 800px) {
     #cssmenu > ul > li:nth-last-child(1){right: 0 !important; position: absolute;}
     .centerdiv{
-        margin-top: 10%;
+        margin-top: 20%;
     }
+}
+footer{
+    position: fixed !important;
 }
