--- a/public/css/menu.css
+++ b/public/css/menu.css
@@ -8,7 +8,6 @@
     display: block;
     position: relative;
     font-family: 'PT Sans', sans-serif;
-
 }
 #cssmenu ul {
     list-style: none;
@@ -715,4 +714,48 @@ footer{
         position: fixed;
     }
 
+}
+
+#SliderPrincipal{
+    margin-top: 100px;
+    margin-left: 100px;
+    margin-right: 300px;
+    display: inline-block;
+    min-width:70%;
+    max-width:70%;
+}
+#SliderPrincipal  p{
+    display: inline;
+    clear:both;
+    float:left;
+    padding: 15px;
+    border: 2px solid #cccccc;
+    background: rgba(128,0,128,0.7);
+    color: #FFFFFF;
+    margin: 5px;
+}
+#SliderPrincipal p:first-child{
+    background: none;
+    color: purple;
+    border: none;
+    font-weight: 600;
+    font-size: 24px;
+    line-height: normal;
+}
+#SliderPrincipal p:nth-child(3){
+    max-width: 70%;
+}
+#SliderPrincipal img{
+    display: inline-block;
+    border: 2px solid #cccccc;
+    width: 100px;
+    height: 100px;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    border-radius: 50%;
+    background: #FFF;
+    border-color: purple;
+    padding: 10px;
+    margin-left: 50px;
+    margin-top: 5px;
 }
