whats algo profesional :3
que onda

--- a/public/css/estilo.css
+++ b/public/css/estilo.css
@@ -5,8 +5,8 @@
     /*Index*/
     .Estado_Proyecto{
         background-color: #2f3439 !important;
-        border-bottom-left-radius: 50% !important;
-        border-top-left-radius: 50% !important;
+        border-bottom-left-radius: 50px !important;
+        border-top-left-radius: 50px !important;
         width: 500px !important;
     }
     /**/
