--- a/public/sass/Progres-Bar-Circular.scss
+++ b/public/sass/Progres-Bar-Circular.scss
@@ -1,18 +1,18 @@
 
-// Colors
-$barColor: tomato;
-$overlayColor: #fffde8;
-$backColor: #2f3439;
-
-@import url(http://fonts.googleapis.com/css?family=Noto+Sans);
 
      .wrap {
        width: 600px;
        margin:0 auto;
      }
-       /* -------------------------------------
-       * Bar container
-       * ------------------------------------- */
+
+     // Colors
+      $barColor: light-grenn;
+      $overlayColor: #fffde8;
+      $backColor: #2f3439;
+
+     /* -------------------------------------
+     * Bar container
+     * ------------------------------------- */
        .progress-radial {
          float: left;
          margin-right: 30px;
@@ -48,9 +48,6 @@ $step: 1; // step of % for created classes
 $loops: round(100 / $step);
 $increment: 360 / $loops;
 $half: round($loops / 2);
-.hola#{$half} {
-  border-radius: 50%;
-}
 
 @for $i from 0 through $loops {
   .progress-#{$i*$step}{
@@ -58,7 +55,7 @@ $half: round($loops / 2);
     $nextdeg: 90deg + ( $increment * $i );
     background-image:linear-gradient(90deg, $backColor 50%, rgba(0, 0, 0, 0) 50%, rgba(0, 0, 0, 0)), linear-gradient($nextdeg, $barColor 50%, $backColor 50%, $backColor);
   } @else {
-    $nextdeg: - 90 deg + ($increment * ($i - $half));
+    $nextdeg: - 90deg + ($increment * ($i - $half));
     background-image:linear-gradient($nextdeg, $barColor 50%,rgba(0, 0, 0, 0) 50%, rgba(0, 0, 0, 0)), linear-gradient(270deg, $barColor 50%, $backColor 50%, $backColor);
   }
 }
