--- a/public/css/estilo.css
+++ b/public/css/estilo.css
@@ -1,4 +1,3 @@
-<<<<<<< Updated upstream
 @media screen and (min-width: 800px) {
     #cssmenu > ul > li:nth-last-child(1){right: 0 !important; position: absolute;}
     .centerdiv{
@@ -8,7 +7,6 @@
 footer{
     position: fixed !important;
 }
-=======
 /*estilos irvvin*/
 .cont{
     display: inline-flex;
@@ -30,13 +28,30 @@ footer{
     border: 12px;
     border-style: solid;
     border-color: rgba(128, 0, 128, 0.5);
+    border-top-left-radius: 12px;
 }
 .icon{
     border-radius: 50%;
-    width: 30px;
-    height: 30px;
-    background-color: #f2f2f2;
-    margin-top: -20px;
-    margin-left: -20px;
+    width: 40px;
+    height: 40px;
+    background-color: rgb(128, 0, 128);
+    margin-top: -13px;
+    margin-left: -13px;
 }
->>>>>>> Stashed changes
+
+@media (max-width: 800px) {
+    .icon {
+        width: 20px;
+        height: 20px;
+        margin-top: -6px;
+        margin-left: -6px;
+    }
+    .yolo{
+        border: 6px;
+        background-color: rgba(200, 0, 200, .3);
+        height: 100%;
+        width: 200px;
+        border-style: solid;
+        border-color: rgba(128, 0, 128, 0.5);
+    }
+}
