--- a/public/css/estilo.css
+++ b/public/css/estilo.css
@@ -9,5 +9,8 @@
         border-top-left-radius: 50px !important;
         width: 500px !important;
     }
+#cssmenu > ul > li:last-child{
+     float: right !important;
+ }
     /**/
 /*Fin del CSS de Moises Barrera Keb*/
