Estilos con mi nombre

--- a/public/sass/estilosMoises.scss
+++ b/public/sass/estilosMoises.scss
@@ -1,4 +1,15 @@
 
+/*Index*/
+.Estado_Proyecto{
+  background-color: rgba(42,57,47,0.5) !important;
+  border-bottom-left-radius: 50px !important;
+  border-top-left-radius: 50px !important;
+  border-top-right-radius: 10px !important;
+  border-bottom-right-radius: 10px !important;
+  width: 400px !important;
+}
+/**/
+
 
      .wrap {
        width: 600px;
@@ -60,3 +71,4 @@ $half: round($loops / 2);
   }
 }
 }
+
