--- a/public/css/estilosMoises.css
+++ b/public/css/estilosMoises.css
@@ -1,3 +1,14 @@
+/*Index*/
+.Estado_Proyecto {
+  background-color: rgba(42, 57, 47, 0.5) !important;
+  border-bottom-left-radius: 50px !important;
+  border-top-left-radius: 50px !important;
+  border-top-right-radius: 10px !important;
+  border-bottom-right-radius: 10px !important;
+  width: 400px !important;
+}
+
+/**/
 .wrap {
   width: 600px;
   margin: 0 auto;
@@ -440,4 +451,4 @@
   background-image: linear-gradient(90deg, purple 50%, transparent 50%, transparent), linear-gradient(270deg, purple 50%, #2f3439 50%, #2f3439);
 }
 
-/*# sourceMappingURL=Progres-Bar-Circular.css.map */
+/*# sourceMappingURL=estilosMoises.css.map */
