--- a/public/css/menu.css
+++ b/public/css/menu.css
@@ -796,3 +796,9 @@ footer{
     height: 40px;
     background: rgba(0,0,0,0.4);
 }
+footer{
+    position: fixed;
+}
+.formWrapper{
+    margin-bottom: 100px !important;
+}
