--- a/public/css/estilosMoises.css
+++ b/public/css/estilosMoises.css
@@ -1,16 +1,65 @@
 /*Index*/
-  /*Estados del proyecto*/
-    .Estado_Proyecto {
-      background-color: rgba(42, 57, 47, 0.5) !important;
-      border-bottom-left-radius: 50px !important;
-      border-top-left-radius: 50px !important;
-      border-top-right-radius: 10px !important;
-      border-bottom-right-radius: 10px !important;
-      width: 400px !important;
-     }
-/*Fin de los estado del proyecto*/
+.Estado_Proyecto {
+  background-color: rgba(42, 57, 47, 0.5) !important;
+  border-bottom-left-radius: 50px !important;
+  border-top-left-radius: 50px !important;
+  border-top-right-radius: 10px !important;
+  border-bottom-right-radius: 10px !important;
+  width: 400px !important;
+}
 
-/**/
+.Conten-proyectos {
+  padding: 20px;
+}
+
+.linea {
+  display: inline-block;
+}
+
+.sidebar_Detalles {
+  position: fixed;
+  background-color: gray;
+  top: 50px;
+  right: -300px !important;
+  display: block;
+  width: 300px;
+  height: 92%;
+  color: #fff;
+  padding: 10px;
+  padding-top: 30px;
+}
+
+.Select_Tipos_Proyecto {
+  display: flex;
+}
+
+.Centrar_P {
+  text-align: center;
+}
+
+.Justificar_P {
+  text-align: justify;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+/*Index-Detalle-Foto-Empleado*/
+.I_D_F_E {
+  border: 1px solid black;
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+}
+
+/*Index-Detalle-Foto-Empleado*/
+.I_D_N_E {
+  font-size: 12px;
+}
+
+.ocultar_D {
+  visibility: hidden;
+}
+
 .wrap {
   width: 600px;
   margin: 0 auto;
