--- a/public/sass/estilosMoises.scss
+++ b/public/sass/estilosMoises.scss
@@ -24,7 +24,7 @@
           width:  300px;
           height: 92%;
           color: #fff;
-
+          padding-top: 30px;
       }
 
       .Select_Tipos_Proyecto{
