--- a/public/sass/estilosMoises.scss
+++ b/public/sass/estilosMoises.scss
@@ -24,7 +24,8 @@
           width:  300px;
           height: 92%;
           color: #fff;
-          padding-top: 30px;
+          padding: 10px;
+          padding-top: 20px;
       }
 
       .Select_Tipos_Proyecto{
