--- a/public/css/estilosMoises.css
+++ b/public/css/estilosMoises.css
@@ -20,7 +20,7 @@
   position: fixed;
   background-color: gray;
   top: 50px;
-  right: -300px !important;
+  right: -300px;
   display: block;
   width: 300px;
   height: 92%;
