--- a/public/sass/ourstyles.scss
+++ b/public/sass/ourstyles.scss
@@ -3,13 +3,14 @@ To change this license header, choose License Headers in Project Properties.
 To change this template file, choose Tools | Templates
 and open the template in the editor.
 */
-/* 
+/*
     Created on : 15/08/2015, 07:22:21 PM
     Author     : Horacio
 */
-//@import "_reset.scss";
-@import "other/_mixins";
+@import "our/_estilosMoises.scss";
+@import "our/_faqs.scss";
+@import "our/_fontsinventarios.scss";
+@import "our/_tareasestilos.scss";
+@import "our/_styleinventario.scss";
+@import "our/_menu.scss";
 @import "other/_variables";
-@import "other/_estilo";
-@import "other/_styles";
-//@import "_mquerys.scss";
