--- a/public/sass/other/_styles.scss
+++ b/public/sass/other/_styles.scss
@@ -10,7 +10,7 @@ and open the template in the editor.
 */
 body {
   font-family: Arial, Helvetica, sans-serif;
-  background-color: #f2f2f2;
+  background-color: #f2f2f2 !important;
 }
 
 .fondox {
