--- a/public/sass/ourstyles.scss
+++ b/public/sass/ourstyles.scss
@@ -15,4 +15,4 @@ and open the template in the editor.
 @import "our/_tareasestilos.scss";
 @import "our/_styleinventario.scss";
 @import "our/_menu.scss";
-@import "our/_estiloOmar.scss";
+@import "our/styleventas";
