--- a/public/sass/our/_faqs.scss
+++ b/public/sass/our/_faqs.scss
@@ -16,10 +16,44 @@
   border-bottom-left-radius: 20px;
   padding: 40px;
 }
-.nose{
+#form_pregunta{
+  display: inline-table;
+  background: rgba(0, 0, 0, 0.3);
+  width: 400px;
+  height: 500px;
+  bottom: 25%;
+  left: 40%;
+  padding: 40px;
+  position: fixed;
+  top: 30%;
+
+}
+.Preguntas{
   display: inline-flex;
   max-height: 400px;
   overflow-y: auto;
   display: block;
   padding-bottom: 10px;
+}
+#preguntas_frecuentes{
+  background: rgba(0, 0, 0, 0.3);
+  height: 35%;
+  bottom: 25%;
+  border-top-left-radius: 20px;
+  border-top-right-radius: 20px;
+  border-bottom-right-radius: 20px;
+  border-bottom-left-radius: 20px;
+  padding: 15px;
+  left: 0%;
+  top: 15%;
+}
+.frecuentes{
+  display: inline-flex;
+  max-height: 400px;
+  max-width: 500px;
+  display: block;
+  padding-bottom: 40px;
+  position: fixed;
+  left: 15%;
+  top: 21%;
 }
