--- a/public/sass/ourstyles.scss
+++ b/public/sass/ourstyles.scss
@@ -14,4 +14,5 @@ and open the template in the editor.
 @import "our/_tareasestilos.scss";
 @import "our/_styleinventario.scss";
 @import "our/_menu.scss";
-@import "our/styleventas";
+@import "our/styleventas.scss";
+@import "our/estilos.scss";
